[AV2-580] fixed alignment issue found in UI review.

--- a/src/app/overview/home/home.component.scss
+++ b/src/app/overview/home/home.component.scss
@@ -6,7 +6,7 @@
 }
 
 .margin-left-right {
-  margin: 0 1em;
+  margin: 0 2em;
 }
 
 .todo-list {
